objects/Question.object
<CustomObject>
    <fields>
        <fullName>Age_days__c</fullName>
        <description>Number of days since this question was posted.</description>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since this question was posted.</inlineHelpText>
        <label>Age (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answered__c</fullName>
        <description>Indicates whether there was an answer to this question, as indicated by selection of a best reply.</description>
        <formula>IF(ISNULL(BestReplyId) || ISBLANK(BestReplyId) || (BestReplyId == ''), 'Answered', 'Unresolved')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether there was an answer to this question, as indicated by selection of a best reply.</inlineHelpText>
        <label>Answered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <description>Time of the first response to this question.</description>
        <inlineHelpText>Time of the first response to this question.</inlineHelpText>
        <label>First Response - Time</label>
        <summarizedField>Reply.CreatedDate</summarizedField>
        <summaryForeignKey>Reply.QuestionId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Response_Count_del__c</fullName>
        <description>Total number of responses to this question.</description>
        <inlineHelpText>Total number of responses to this question.</inlineHelpText>
        <label>Response Count</label>
        <summaryForeignKey>Reply.QuestionId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Time_to_Best_Reply__c</fullName>
        <description>Amount of time between first post and the best reply, as chosen.</description>
        <formula>IF(ISNULL(BestReply.CreatedDate), 0, BestReply.CreatedDate - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of time between first post and the best reply, as chosen.</inlineHelpText>
        <label>Time to Best Reply</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_First_Response__c</fullName>
        <description>Time elapsed since the question was first asked to the first response.</description>
        <formula>IF(ISNULL(First_Response_Time__c), 0, First_Response_Time__c - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time elapsed since the question was first asked to the first response.</inlineHelpText>
        <label>Time to First Response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <recordTypes>
        <fullName>Record_type_for_community_09a0000000000RZAAY_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>Internal Ideas (Customer Care): Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a0000000000StAAI_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>Portal Ideas: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a0000000001pjAAA_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>Internal Ideas (Sales): Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a00000000Cd6mAAC_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific community</description>
        <label>IT Corp Systems Ideas: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a00000000Cd7VAAS_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific zone</description>
        <label>CS Ideas: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a1N0000002KPrQAM_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific zone</description>
        <label>Product Ideas / Suggestions (QuickMobile): Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09a2G000000k9rVQAQ_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific zone</description>
        <label>Mid-Market Account Management: Question Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_type_for_community_09ao0000000N53XAAS_entity_Question</fullName>
        <active>true</active>
        <description>Record type used to associate Question with a specific zone</description>
        <label>Products: Question Record Type</label>
    </recordTypes>
</CustomObject>